# relational-graph

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: P0_P1_IMPROVEMENTS.md  VN2_TRAINING_SUMMARY.md  feature_schema.md  onboarding.md  titanic.md
graph_qa/: __init__.py  calibration_metrics.py  cli.py  config.py  meta.py
graph_qa/data/: demo_graph.jsonl  vn2_graph_sample.jsonl
graph_qa/decode/: complete.py  costs.py  ksp.py  path_score.py  steiner.py
graph_qa/io/: loader.py
graph_qa/llm/: prompts.py  router.py  tools.py
graph_qa/sampling/: temporal_egonet.py
graph_qa/scoring/: calibrate.py  interfaces.py  learned_scorer.py  relgt_stub.py
graph_qa/train/: __init__.py  dataset.py  model.py  model_v2.py  trainer.py
notebooks/: demo.ipynb  titanic.ipynb  vn2_demo.ipynb
scripts/: calibrate_scorer.py  compute_transfer_weights.py  evaluate_scorer.py  orders_vn2.py  visualize_example_graph.py  vn2_to_jsonl.py  vn2_to_temporal_snapshots.py
tests/: test_leakage_guard.py  test_llm_tools.py  test_sampling.py  test_scoring_decode.py
