[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relational-graph"
version = "0.1.0"
description = "LLM × RELGT Subgraph Prediction & Graph QA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.2",
  "typer>=0.9.0",
  "pydantic>=2.0.0",
  "pytest>=7.0.0",
  "torch>=2.0.0",
  "torch_geometric>=2.5.0; python_version >= '3.10'",
]

[project.scripts]
relational-graph = "graph_qa.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
packages = ["graph_qa"]


